# rpc-prof

./: .gitignore  Dockerfile.golang  Dockerfile.rust  plot.py  plot_golang_bench.py  plot_pss.py  plot_rust_bench.py  run.sh  run_golang_bench.sh  run_rust_bench.sh  smem.sh
grpc-golang-bench/: go.mod  go.sum
grpc-golang-bench/pb/: Protobuild.toml  task.proto
grpc-golang-bench/pb/task/: task.pb.go  task_grpc.pb.go
grpc-golang-bench/src/client/: client.go
grpc-golang-bench/src/server/: interceptor.go  server.go
grpc-rust-bench/: Cargo.toml
grpc-rust-bench/src/: build.rs  client.rs  server.rs
ttrpc-golang-bench/: go.mod  go.sum
ttrpc-golang-bench/client/ttrpc/: client.go
ttrpc-golang-bench/pb/: Protobuild.toml  task.proto
ttrpc-golang-bench/pb/task/: task.pb.go  task_ttrpc.pb.go
ttrpc-golang-bench/server/ttrpc/: interceptor.go  mem.pprof  server.go
ttrpc-rust-bench/: Cargo.toml
ttrpc-rust-bench/src/: lib.rs  utils.rs
ttrpc-rust-bench/src/proto/: mod.rs  task.proto  task.rs  task_ttrpc.rs
