[package]
name = "grpc-test"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the task gRPC server
name = "server"
path = "src/server.rs"

[[bin]] # Bin to run the task gRPC client
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
memory-stats = "=1.2.0"
rand = "0.8.5"

[build-dependencies]
tonic-build = "0.12"
