[package]
name = "ttrpc-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = { version = "3.1.0" }
ttrpc = "0.8.1"
ctrlc = { version = "3.0", features = ["termination"] }
memory-stats = "1.2.0"
rand = "0.8.5"
